--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "vscode-pgsql",
-  "displayName": "vscode-pgsql",
+  "name": "postgresql",
+  "displayName": "postgresql",
   "version": "0.0.1",
   "description": "Develop PostgreSQL everywhere",
-  "publisher": "Microsoft",
+  "publisher": "ms-ossdata",
   "preview": true,
   "license": "",
   "aiKey": "AIF-5574968e-856d-40d2-af67-c89a14e76412",
@@ -14,12 +14,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Microsoft/vscode-pgsql.git"
+    "url": "https://github.com/Microsoft/vscode-postgresql.git"
   },
   "bugs": {
-    "url": "https://github.com/Microsoft/vscode-pgsql/issues"
+    "url": "https://github.com/Microsoft/vscode-postgresql/issues"
   },
-  "homepage": "https://github.com/Microsoft/vscode-pgsql/blob/master/README.md",
+  "homepage": "https://github.com/Microsoft/vscode-postgresql/blob/master/README.md",
   "engines": {
     "vscode": "^1.17.0"
   },
