--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "postgresql",
+  "name": "vscode-postgresql",
   "displayName": "PostgreSQL",
   "version": "0.1.0",
   "description": "Develop Postgres everywhere",
