Added Postgres to keywords

--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "SQL",
     "PGSQL",
     "PG",
-    "PosgreSQL"
+    "PosgreSQL",
+    "Postgres"
   ],
   "activationEvents": [
     "onLanguage:sql",
