--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,10 @@
     "compilerOptions": {
         "module": "commonjs",
         "target": "ES6",
+        "strict": true,
+        "esModuleInterop": true,
+        "skipLibCheck": true,
+        "forceConsistentCasingInFileNames": true,
         "lib": [ "es6" ],
         "sourceMap": true,
         "emitDecoratorMetadata": true,
