--- a/package.json
+++ b/package.json
@@ -51,72 +51,72 @@
     "vscode.sql"
   ],
   "devDependencies": {
-    "chai": "^5.1.1",
-    "coveralls": "^3.1.1",
+    "chai": "^3.5.0",
+    "coveralls": "^2.11.15",
     "decache": "^4.1.0",
     "del": "^2.2.1",
-    "gulp": "github:gulpjs/gulp#v5.0.0",
-    "gulp-clean-css": "^4.3.0",
+    "gulp": "github:gulpjs/gulp#v4.0.0",
+    "gulp-clean-css": "^2.0.13",
     "gulp-concat": "^2.6.0",
-    "gulp-filter": "^9.0.1",
-    "gulp-install": "^1.1.0",
+    "gulp-filter": "^5.0.0",
+    "gulp-install": "^0.6.0",
     "gulp-istanbul-report": "0.0.1",
     "gulp-json-editor": "^2.2.1",
-    "gulp-remote-src": "0.4.4",
-    "gulp-rename": "^2.0.0",
-    "gulp-shell": "^0.8.0",
-    "gulp-sourcemaps": "^3.0.0",
-    "gulp-tslint": "^8.1.4",
-    "gulp-typescript": "^6.0.0-alpha.1",
-    "gulp-uglify": "^3.0.2",
+    "gulp-remote-src": "0.4.1",
+    "gulp-rename": "^1.2.2",
+    "gulp-shell": "^0.5.2",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-tslint": "^6.0.2",
+    "gulp-typescript": "^3.1.4",
+    "gulp-uglify": "^2.0.0",
     "istanbul": "^0.4.5",
-    "jasmine-core": "~5.2.0",
-    "karma": "^6.4.4",
-    "karma-chrome-launcher": "^3.2.0",
-    "karma-coverage": "^2.2.1",
+    "jasmine-core": "~2.4.1",
+    "karma": "^1.3.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-coverage": "^1.1.1",
     "karma-htmlfile-reporter": "^0.3.4",
-    "karma-jasmine": "^5.1.0",
-    "karma-jasmine-html-reporter": "^2.1.0",
-    "karma-junit-reporter": "^2.0.1",
-    "karma-remap-istanbul": "^0.6.0",
+    "karma-jasmine": "^1.0.2",
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-junit-reporter": "^1.1.0",
+    "karma-remap-istanbul": "^0.2.1",
     "pm-mocha-jenkins-reporter": "^0.2.6",
-    "remap-istanbul": "^0.13.0",
-    "systemjs-builder": "^0.16.15",
-    "tslint": "^5.20.1",
-    "typemoq": "^2.1.0",
-    "typescript": "5.5.4",
+    "remap-istanbul": "^0.6.4",
+    "systemjs-builder": "^0.15.32",
+    "tslint": "^3.14.0",
+    "typemoq": "^1.7.0",
+    "typescript": "2.3.4",
     "uglify-js": "mishoo/UglifyJS2#harmony-v2.8.22",
-    "vscode": "^1.1.37",
-    "vscode-nls-dev": "4.0.4",
-    "xmldom": "^0.6.0",
+    "vscode": "^1.0.5",
+    "vscode-nls-dev": "https://github.com/Raymondd/vscode-nls-dev/releases/download/2.0.2/build.tar.gz",
+    "xmldom": "^0.1.27",
     "yargs": "https://registry.npmjs.org/yargs/-/yargs-3.32.0.tgz"
   },
   "dependencies": {
-    "applicationinsights": "^3.2.1",
+    "applicationinsights": "^1.0.8",
     "body-parser": "^1.15.2",
-    "comment-json": "^4.2.4",
+    "comment-json": "^1.1.3",
     "copy-paste": "^1.3.0",
     "decompress": "^4.2.0",
-    "ejs": "^3.1.10",
+    "ejs": "^2.4.2",
     "error-ex": "^1.3.0",
     "express": "^4.13.3",
-    "figures": "^6.1.0",
-    "fs-extra-promise": "^1.0.1",
-    "getmac": "6.6.0",
-    "http-proxy-agent": "^7.0.2",
-    "https-proxy-agent": "^7.0.5",
-    "jsonc-parser": "^3.3.1",
-    "opener": "1.5.2",
-    "plist": "^3.1.0",
+    "figures": "^1.4.0",
+    "fs-extra-promise": "^0.3.1",
+    "getmac": "1.2.1",
+    "http-proxy-agent": "^2.1.0",
+    "https-proxy-agent": "^2.2.1",
+    "jsonc-parser": "^1.0.0",
+    "opener": "1.4.2",
+    "plist": "^2.1.0",
     "pretty-data": "^0.40.0",
     "request": "^2.73.0",
     "semver": "https://registry.npmjs.org/semver/-/semver-5.0.3.tgz",
-    "tmp": "^0.2.3",
+    "tmp": "^0.0.28",
     "underscore": "^1.8.3",
-    "vscode-extension-telemetry": "^0.4.5",
-    "vscode-languageclient": "^9.0.1",
-    "vscode-nls": "^5.2.0",
-    "ws": "^8.18.0"
+    "vscode-extension-telemetry": "^0.1.1",
+    "vscode-languageclient": "^3.5.1",
+    "vscode-nls": "^2.0.2",
+    "ws": "^1.1.1"
   },
   "contributes": {
     "languages": [
@@ -538,7 +538,7 @@
   },
   "scripts": {
     "postinstall": "node ./node_modules/vscode/bin/install",
-    "install-packages": "npm install github:gulpjs/gulp#v5.0.0 && npm install gulp-install && gulp --gulpfile install.js install",
+    "install-packages": "npm install github:gulpjs/gulp#v4.0.0 && npm install gulp-install && gulp --gulpfile install.js install",
     "package": "gulp package:online"
   }
 }
