--- a/src/views/htmlcontent/package.json
+++ b/src/views/htmlcontent/package.json
@@ -3,15 +3,16 @@
   "version": "1.0.0",
   "description": "",
   "dependencies": {
-    "@angular/common": "~4.4.7",
-    "@angular/compiler": "~4.4.7",
-    "@angular/core": "~4.4.7",
-    "@angular/forms": "~4.4.7",
-    "@angular/platform-browser": "~4.4.7",
-    "@angular/platform-browser-dynamic": "~4.4.7",
-    "@angular/router": "~4.4.7",
-    "@angular/upgrade": "~4.4.7",
-    "angular-in-memory-web-api": "~0.4.6",
+    "@angular/common": "~2.1.2",
+    "@angular/compiler": "~2.1.2",
+    "@angular/core": "~2.1.2",
+    "@angular/forms": "~2.1.2",
+    "@angular/http": "~2.1.2",
+    "@angular/platform-browser": "~2.1.2",
+    "@angular/platform-browser-dynamic": "~2.1.2",
+    "@angular/router": "~3.1.2",
+    "@angular/upgrade": "~2.1.2",
+    "angular-in-memory-web-api": "~0.1.13",
     "angular2-slickgrid": "github:microsoft/angular2-slickgrid#1.2.2",
     "copy-paste": "^1.3.0",
     "core-js": "^2.4.1",
@@ -28,7 +29,7 @@
     "assert": "^1.4.1"
   },
   "overrides": {
-    "@angular/core": "~4.4.7",
-    "@angular/platform-browser": "~4.4.7"
+    "rxjs": "~5.0.0-rc.4",
+    "zone.js": "~0.7.2"
   }
 }
